[gd_scene load_steps=6 format=3 uid="uid://bwxv8yqr3mj5p"]

[ext_resource type="Script" path="res://scripts/game/Game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/game/NoteSpawner.gd" id="2_spawner"]
[ext_resource type="Script" path="res://scripts/game/InputHandler.gd" id="3_input"]
[ext_resource type="Script" path="res://scripts/game/JudgementSystem.gd" id="4_judgement"]
[ext_resource type="Script" path="res://scripts/ui/UIController.gd" id="5_ui"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("3_input")

[node name="JudgementSystem" type="Node" parent="."]
script = ExtResource("4_judgement")

[node name="Visuals" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Visuals"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Lane0" type="ColorRect" parent="Visuals"]
offset_left = 380.0
offset_top = 0.0
offset_right = 420.0
offset_bottom = 720.0
color = Color(1, 0.2, 0.2, 0.1)

[node name="Lane1" type="ColorRect" parent="Visuals"]
offset_left = 500.0
offset_top = 0.0
offset_right = 540.0
offset_bottom = 720.0
color = Color(0.2, 0.5, 1, 0.1)

[node name="Lane2" type="ColorRect" parent="Visuals"]
offset_left = 620.0
offset_top = 0.0
offset_right = 660.0
offset_bottom = 720.0
color = Color(0.2, 1, 0.3, 0.1)

[node name="Lane3" type="ColorRect" parent="Visuals"]
offset_left = 740.0
offset_top = 0.0
offset_right = 780.0
offset_bottom = 720.0
color = Color(1, 0.9, 0.2, 0.1)

[node name="JudgementLine" type="ColorRect" parent="Visuals"]
offset_left = 0.0
offset_top = 598.0
offset_right = 1280.0
offset_bottom = 602.0
color = Color(1, 1, 1, 0.8)

[node name="NoteSpawner" type="Node2D" parent="."]
script = ExtResource("2_spawner")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("5_ui")

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 540.0
offset_top = 20.0
offset_right = 740.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="UI"]
offset_left = 540.0
offset_top = 500.0
offset_right = 740.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 40
text = "0 COMBO"
horizontal_alignment = 1

[node name="JudgementLabel" type="Label" parent="UI"]
offset_left = 540.0
offset_top = 300.0
offset_right = 740.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 48
text = "PERFECT"
horizontal_alignment = 1
visible = false

[node name="AccuracyLabel" type="Label" parent="UI"]
offset_left = 1000.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Accuracy: 0.0%"
horizontal_alignment = 1

[node name="GradeLabel" type="Label" parent="UI"]
offset_left = 1000.0
offset_top = 70.0
offset_right = 1260.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 32
text = "S"
horizontal_alignment = 1
visible = false

[node name="DebugDisplay" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 16
text = "Time: 0.000
FPS: 60
Latency (ms): 0.0
Active Notes: 0"
